--- a/assets/game-over.css
+++ b/assets/game-over.css
@@ -11,10 +11,11 @@ h3 {
     border: 1px solid #54934c;
     color: #fff;
     border-radius: 5px;
-    margin: 10%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 10%;
 }
 
 .btn {
@@ -38,5 +39,12 @@ h3 {
 
 .input {
     width: 50%;
+    justify-content: center;
+}
+
+.game-over-wrapper {
+    margin: 75px 40px;
+    padding: 5px;
+    display: flex;
     justify-content: center;
 }
