--- a/assets/scores.css
+++ b/assets/scores.css
@@ -1,12 +1,18 @@
 .scores-wrapper {
     background-color: #54934c;
+    padding: 75px 40px;
+    text-align: center;
     font-size: 20px;
-    font-weight: 700;
-    color:#fff;
-    margin: 5px;
-    padding: 5px;
+    border: 1px solid #54934c;
+    color: #fff;
+    border-radius: 5px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    margin: 10%;
+}
+
+.final-score {
+    font-size: 35px
 }
